# app-pipeline-api-sienge

./: .gitignore  README.md  pyproject.toml
app/: app.py
etl/: etl_inadimplencia.py  etl_mov_bancarias.py  etl_orcamentos.py  etl_receitas.py
utils/: __init__.py  etl_insumos.py  etl_pagamentos.py
